--- a/Measurement.html
+++ b/Measurement.html
@@ -182,7 +182,7 @@
                            </div>
                         </div>
                      </div>
-                     <form role="form" method="post" action="/bat/sendEmail.php">
+                     <form role="form" method="post" action="./bat/sendEmail.php">
                         <div class="row setup-content" id="step-1">
                            <div class="col-xs-12">
                               <div class="col-md-12">
